test/pass/optargs/optarg_class_constructor.lily
class Test(var @a: String, var @b: String, var @c: *Boolean = false)
{
}
